--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "firebase": "^11.0.1",
     "next": "15.0.2",
     "next-nprogress-bar": "^2.3.14",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-progress-bar": "^0.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-progress-bar": "^0.1.0",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@types/node": "^20",
